--- a/style.css
+++ b/style.css
@@ -2,7 +2,6 @@
     margin: 0px;
     padding: 0px;
 }
-
 .eight
 {
     display: flex;
@@ -45,3 +44,22 @@
     padding: 5px; 
     flex-basis: 20%;
 } 
+
+button {
+    padding: 10px 20px;
+    background-color: #6200ea;
+    color: white;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+}
+button:hover {
+    background-color: #3700b3;
+}
+.seven {
+    color: blue;
+    font-size: 24px;
+    text-align: center;
+    margin-top: 20px;
+    display: none; /* Initially hidden */
+}
